--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "name": "Teen Wolf",
     "description": "Aplicaciòn personajes de Teen wolf", 
     "start_url": "index.html",
-    "background_color": "#0275d8",
-    "theme_color": "#2347F1",
+    "background_color": "#2922AC",
+    "theme_color": "#2922AC",
     "display": "standalone",
     "orientation": "portrait",
     "icons":[
@@ -14,21 +14,16 @@
             "sizes":"32x32"
         },
         {
-            "src":"icons/48x48.png",
-            "type": "image/png",
-            "sizes":"48x48"
-        },
-        {
             "src":"icons/64x64.png",
             "type": "image/png",
             "sizes":"64x64"
+        },
+        {
+            "src":"icons/128x128.png",
+            "type": "image/png",
+            "sizes":"128x128"
         }
         ,
-        {
-            "src":"icons/72x72.png",
-            "type": "image/png",
-            "sizes":"72x72"
-        },
         {
             "src":"icons/256x256.png",
             "type": "image/png",
